# moonlight_hdr_launcher

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  install.py  install.spec  main.cpp  requirements.txt  vcpkg.json  version.rc.in  version.txt.in
src/: CMakeLists.txt  hdr_toggle.cpp  hdr_toggle.hpp  main.cpp
